# sec-edgar-filings-to-qdrant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  docker-publish.yml
examples/: sample-event.json
src/edgar_etl/: admin_api.py  admin_service.py  api.py  cli.py  config.py  connectivity.py  consumer.py  embed.py  embedding_runtime.py  errors.py  extract.py  kafka_manager.py  models.py  mongo.py  ollama_embed.py  pipeline.py  qdrant_search.py  query.py  store.py
src/edgar_etl/static/: admin.html  index.html
tests/: test_admin_api.py  test_api.py  test_embedding_runtime.py  test_extract.py
