[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sec-edgar-filings-to-qdrant"
version = "0.1.0"
description = "Kafka consumer that extracts SEC EDGAR filings from local disk, embeds them, and loads into Qdrant."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "confluent-kafka>=2.6",
    "lxml>=5.3",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "qdrant-client>=1.12",
    "sentence-transformers>=3.3",
    "structlog>=24.4",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]
dev = [
    "pytest>=8.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
]

[project.scripts]
edgar-etl = "edgar_etl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/edgar_etl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
